# Simple-Renderer

./: CMakeLists.txt  README.md  RayTracer.cpp  main.cpp
camera/: camera.hpp
geometry/: CMakeLists.txt  geometry.h  shape.cpp  shape.h
hitable_list/: CMakeLists.txt  hitable_list.cpp  hitable_list.hpp
include/: renderer.h
material/: CMakeLists.txt  material.cpp  material.hpp
model/: CMakeLists.txt  geometry.h  model.cpp  model.h
object/: CMakeLists.txt  object.cpp  object.h
renderer/: CMakeLists.txt  renderer.cpp  renderer.h  renderer.hpp
shader/: CMakeLists.txt  shader.cpp  shader.h  shader.hpp
src/: renderer.cpp
texture/: CMakeLists.txt  texture.cpp  texture.h
